# clientflow

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: db.py  evaluator.py  main.py  models.py  service.py  validation.py
backend/bench/: baseline.json  benchmark.py  regress.py
backend/tests/: test_api.py  test_db.py  test_evaluator.py  test_properties.py  test_validation.py  test_versioning.py
web/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: flow.spec.ts
web/src/: App.tsx  RuleEditor.tsx  api.ts  rules.ts  styles.css  types.ts
web/tests/: App.test.tsx  rules.test.ts
